[package]
name = "quadtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
